# CenterCTF-4-writeups

./: README.md
checkers/: requirements.txt
checkers/ABOBUS_messenger/: api.py  checker.py  minipwn.py
checkers/kubik/: checker.py  device.py  minijit.py  requirements.txt
checkers/prank_shop/: checker.py
checkers/thermostat/: checker.py  example_lib.py
services/ABOBUS_messenger/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh  init.sql
services/ABOBUS_messenger/bulletproofs/: CHANGELOG.md
services/ABOBUS_messenger/bulletproofs/src/: generators.rs  linear_proof.rs  util.rs
services/ABOBUS_messenger/bulletproofs/src/range_proof/: messages.rs  party.rs
services/ABOBUS_messenger/bulletproofs/tests/: r1cs.rs  range_proof.rs
services/ABOBUS_messenger/serpent/src/: lib.rs
services/ABOBUS_messenger/src/: main.rs  storage.rs  user.rs
services/kubik/: Dockerfile  docker-compose.yml
services/kubik/kubik/: Cargo.toml
services/kubik/kubik/src/: encryption.rs  flagdb.rs  http.rs  main.rs  minijit_interop.rs  mqtt.rs  secret_storage.rs
services/kubik/minijit/: Cargo.toml  building.txt
services/kubik/minijit/src/: lib.rs
services/kubik/mqtt-broker/: Dockerfile  acl  mosquitto.conf
services/prank_shop/: .gitignore  Dockerfile  client.py  docker-compose.yml  init.sql  requirements.txt
services/prank_shop/app/: app.py  db.py  models.py
services/thermostat/: docker-compose.yml
services/thermostat/service/: Dockerfile  go.mod  go.sum
services/thermostat/service/cmd/: main.go
services/thermostat/service/pkg/config/: config.go
services/thermostat/service/pkg/database/: database.go
services/thermostat/service/pkg/handlers/: change_password.go  create_thermostat.go  current_thermostat_temperature.go  get_profile.go  get_profiles.go  handler.go  health.go  login.go  logout.go  my_thermostats.go  refresh.go  register.go  set_thermostat_temperature.go  thermostat_history.go  update_profile.go
services/thermostat/service/pkg/middlewares/: authenticated.go  logging.go  middlewares.go  panic_recovery.go
services/thermostat/service/pkg/models/: claims.go  thermostat.go  thermostat_history.go  updatable_thermostat_fields.go  updatable_user_fields.go  user.go
services/thermostat/service/pkg/utils/: parse_form_page_params.go  parse_token.go  response_with_error.go
sploits/ABOBUS_messenger/: README.MD
sploits/ABOBUS_messenger/exploit_proof/: Cargo.toml  compile.sh  exploit.py
sploits/ABOBUS_messenger/exploit_proof/bulletproofs/: Cargo.toml
sploits/ABOBUS_messenger/exploit_proof/bulletproofs/benches/: linear_proof.rs
sploits/ABOBUS_messenger/exploit_proof/bulletproofs/src/: inner_product_proof.rs  lib.rs
sploits/ABOBUS_messenger/exploit_proof/bulletproofs/src/range_proof/: mod.rs
sploits/ABOBUS_messenger/exploit_proof/src/: main.rs
sploits/kubik/: 1-fnmatchWildcard.py  2-minijitRCE.py  2-sploit-127001_port_4444.txt  README.md
sploits/kubik/tools-for-2nd-exploit/: bruteforce_48C7C0_opcodes.py  bruteforce_FF_opcodes.py  prog.txt  prog_example.txt  run_prog.py  run_shellcode.py  to_mqtt_req.py
sploits/prank_shop/: exploit.py
sploits/thermostat/: change-password.py  current-thermostat-history-idor.py  default-jwt-secret.py  sql-injection.py  thermostat-history-broken-access.py
