[package]
name = "ABOBUS_messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
serpent = { version = "0.6.0-pre", path = "serpent" }
bulletproofs = { path = "bulletproofs" , version = "5.0.0" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
base64 = "0.21.7"
curve25519-dalek = { version = "4.1.1", features = ["digest", "group", "legacy_compatibility", "rand_core", "serde"] }
merlin = { version = "3", default-features = false }
rand = { version = "0.8", default-features = false }
sha2 = "0.10.8"
