[package]
name = "kubik"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
http-body-util = "0.1.0"
serde = { version = "1.0.195", features = ["derive"] }
futures-util = "0.3.30"
tokio-stream = { version = "0.1.14", features = ["sync"] }
rumqttc = "0.23.0"
serde_json = "1.0.111"
http = "1.0.0"
kv = "0.24.0"
rand = "0.8.5"
fnmatch-sys = "1.0.0"
libc = "0.2.153"
libloading = "0.8.3"